# medical-pa-env

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
medical_pa_env/: .dockerignore  README.md  __init__.py  client.py  grader.py  models.py  openenv.yaml  pyproject.toml  tasks.py
medical_pa_env/server/: Dockerfile  __init__.py  app.py  medical_pa_environment.py
server/: app.py  environment.py
